--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
           <img src="dailysketches/Screenshot 2023-04-09 at 11.24.50 AM.png" alt="R3" />
         </a>
       </div>
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/04.05.png" alt="R3" />
+        </a>
+      </div>
       <!-- add more gallery items here as needed -->
     </div>
   </body>
