--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="04.07/">04.07</a></li>
       <li><a href="04.08/">04.08</a></li>
       <li><a href="04.09/">04.09</a></li>
+      <li><a href="04.10/">04.10</a></li>
       <li><a href="coding-challenge/">coding challenge</a></li>
     </ul>
     <div class="gallery">
@@ -105,20 +106,54 @@
       </div>
       <div class="gallery-item">
         <a href="dailysketches/04.08 (1).png">
-          <img src="dailysketches/Screenshot 2023-04-09 at 10.52.09 AM.png" alt="R3" />
+          <img src="dailysketches/someday.png" alt="R3" />
         </a>
       </div>
       <div class="gallery-item">
         <a href="dailysketches/04.08 (1).png">
-          <img src="dailysketches/Screenshot 2023-04-09 at 11.24.50 AM.png" alt="R3" />
+          <img src="dailysketches/someday2.png" alt="R3" />
         </a>
       </div>
       <div class="gallery-item">
         <a href="dailysketches/04.05.png">
           <img src="dailysketches/04.05.png" alt="R3" />
         </a>
+      </div> 
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/day14 (1).png" alt="R3" />
+        </a>
       </div>
-      <!-- add more gallery items here as needed -->
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/day14 (2).png" alt="R3" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/day14 (3).png" alt="R3" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/04.01.png" alt="R3" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/04.10.png" alt="R3" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/04.10 (1).png" alt="R3" />
+        </a>
+      </div>
+      <div class="gallery-item">
+        <a href="dailysketches/04.05.png">
+          <img src="dailysketches/04.10 (2).png" alt="R3" />
+        </a>
+      </div2
     </div>
   </body>
 </html>
