--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Esther's Sketches</h1>
     <ul>
-      <li><a href="">03.21</a></li>
+      <li><a href="03.21/index.html">03.21</a></li>
       <li><a href="03.22/">03.22</a></li>
       <li><a href="03.23/">03.23</a></li>
       <li><a href="03.24/">03.24</a></li>
